syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="ModifyUserBaseInfoPB";
//Generated By BrewRobot:Tue Mar 28 13:44:54 CST 2017

message PBIFE_userinfomanage_modifyUserBaseInfo{
	///ife/userinfomanage/modifyUserBaseInfo.html


}

message Ret_PBIFE_userinfomanage_modifyUserBaseInfo{
	///ife/userinfomanage/modifyUserBaseInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userinfomanage_modifyUserBaseInfo data=3;


}

message REQ_PBIFE_userinfomanage_modifyUserBaseInfo{
	///ife/userinfomanage/modifyUserBaseInfo.html

	string zipCode = 1; //,邮编,String,不校验,是,邮政编码

	string address = 2; //,地址,String,不校验,是,联系地址

	string phone = 3; //,手机号,String,11,是,固定电话

	string content = 4; //,紧急联系人,String,不校验,是,紧急联系人

	string contentMobile = 5; //,紧急联系人手机号,String,11,是,联系电话

	string wechat = 6; //,紧急联系人手机号,String,11,是,微信号

	string education = 7; //,紧急联系人手机号,String,11,是,学历（高中及以下，大专，本科，硕士，博士，博士后）

	string profession = 8; //,紧急联系人手机号,String,11,是,职业（金融行业，公务人员，医护人员，教职人员，企业职员，自由职业，无职业）

	string domicile = 9; //,紧急联系人手机号,String,11,是,居住地


}